--- a/CurrentProjects/iroha.tex
+++ b/CurrentProjects/iroha.tex
@@ -1,5 +1,14 @@
 Hyperledger Iroha (\url{https://github.com/hyperledger/iroha}) joined Fabric and Sawtooth Lake to become the third distributed ledger platform under the Hyperledger umbrella in October, 2016. It was originally developed by Soramitsu in Japan and was proposed to Hyperledger by Soramitsu, Hitachi, NTT Data, and Colu.
 
-Hyperledger Iroha is designed to be simple and easy to incorporate into infrastructural projects requires distributed ledger technology. Hyperledger Iroha features a simple construction; modern, domain-driven C++ design, emphasis on mobile application development and a new, chain-based Byzantine Fault Tolerant consensus algorithm, called Sumeragi. 
+Hyperledger Iroha is designed to be simple and easy to incorporate into infrastructural projects requires distributed ledger technology. Iroha provides a modular design,  Hyperledger Iroha features a simple construction; modern, domain-driven C++ design, emphasis on mobile application development and a new, chain-based Byzantine Fault Tolerant consensus algorithm, called YAC.
 
-Iroha takes a very different design philosophy from Fabric and Sawtooth Lake, in that it focuses on providing features that are helpful for creating applications for end-users. 
+ 
+Iroha takes a very different design philosophy from Fabric and Sawtooth Lake, adapting current best practices and providing features that are helpful for creating applications for end-users. The main features of Iroha are the following: 
+
+\begin{itemize}
+\item 
+Creation and management of custom complex assets, such as currencies or indivisible rights, serial numbers, patents, etc.
+\item Management of user accounts, building an hierarchical taxonomy based on domains(sub-ledgers).
+\item Validation of custom business rules and verification of user permissions for the execution of transactions and queries in the system.
+\item Fast query execution through command query separation. 
+\end{itemize} 
