Add Iroha use cases

--- a/RelevantUseCases/HealthCredentialing.tex
+++ b/RelevantUseCases/HealthCredentialing.tex
@@ -61,3 +61,4 @@ graduation from an accredited university without the need to contact the medical
 directly. The applying physician need only expose precisely what is required for credentialing at
 the hospital; no additional exposure is necessary.
 
+The flexible permission model used in Hyperledger Iroha allows to build certifying identities and grant certificates. The storage of explicit and implicit information in users' account build various reputation and identity systems utilizing information from different sources and context.     
