--- a/RelevantUseCases/applying_for_a_loan.tex
+++ b/RelevantUseCases/applying_for_a_loan.tex
@@ -6,4 +6,5 @@ The identity solution offered by Hyperledger Indy is transformative here. Applic
 
 Strong, distributed ledger-based identity establishes a global source of truth in this use case, and this delivers value to many parties. Applicants can give consent, and everyone can agree on when and with what conditions it was given; lenders can demonstrate equal opportunity conformance with an immutable audit trail; the marketplace operates more efficiently.
 
-This use case only gets more compelling when the goodness of other Hyperledger projects is added. Hyperledger Burrow could turn loan applications into contracts, and attach them to strong identities as a seamless next step. A membership system based on Hyperledger Fabric could link to the pre-existing and self-sovereign identity of the application, allowing them to service loans and be a responsible customer of the lender without painful onboarding. And so forth.
+This use case only gets more compelling when the goodness of other Hyperledger projects is added. Hyperledger Burrow could turn loan applications into contracts, and attach them to strong identities as a seamless next step. A membership system based on Hyperledger Fabric could link to the pre-existing and self-sovereign identity of the application, allowing them to service loans and be a responsible customer of the lender without painful onboarding.
+Hyperledger Iroha allows to combine multiple contexts from different domains and securely store user private data to build up a a loan service. 
