--- a/RelevantUseCases/financial_services.tex
+++ b/RelevantUseCases/financial_services.tex
@@ -37,3 +37,5 @@ As described above current post trade activities happen at the end of the busine
 \textbf{Hyperledger Sawtooth} transaction families provide a reliable and performant way to encapsulate the operations relevant to post trade activities. The ability to build complex rules using a prefered language while exposing only the functions permitted in the context, enables safer smart contract deployments. Additionally, the option to prohibit ad-hoc smart contract deployment further reduces risks for financial services institutions.
 
 \textbf{Hyperledger Indy's} unlinkable verifiable claims can be leveraged to report outstanding risk on a shared ledger without compromising the identity of the firm. This still allows a regulatory body to have a holistic view of the market, enabling it to prevent potential market crashes and major defaults. This feature can alleviate users' privacy concerns, by putting participants in control of their network identities and disclosed attributes.
+
+\textbf{Hyperledger Iroha} is focused on building applications with simple and clear functionality, encoding common business rules in the heart of the system to simplify the development of financial services, and at the same time, improving the security and speed.
