--- a/CurrentProjects/iroha.tex
+++ b/CurrentProjects/iroha.tex
@@ -11,5 +11,5 @@ Hyperledger Iroha takes a very different design philosophy from Fabric and Sawto
 \item Robust SDKs for a variety of software platforms, including mobile apps; the emphasis on 
 \end{itemize} 
 
-Hyperledger Iroha was designed to be simple and easy to incorporate into software applications that require distributed ledger technology. Hyperledger Iroha provides a modular design and features a simple construction; modern, domain-driven C++ design, emphasis on mobile application development,s and a new, Byzantine Fault Tolerant consensus algorithm, called YAC.
+Hyperledger Iroha was designed to be simple and easy to incorporate into software applications that require distributed ledger technology. Hyperledger Iroha provides a modular design and features a simple construction; modern, domain-driven C++ design, emphasis on mobile application development, and a new, Byzantine Fault Tolerant consensus algorithm, called YAC.
 
